apps/jellyfin/components/tls/httproute-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-tls
spec:
  hostnames:
    - jellyfin.i.shikanime.studio
  parentRefs:
    - name: jellyfin
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8920
