apps/jellyfin/components/tls/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-https
spec:
  hostnames:
    - jellyfin.i.shikanime.studio
  parentRefs:
    - name: jellyfin
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8920
      timeouts:
        request: 0s
